// Vitest Snapshot v1

exports[`Checkbox > name 1`] = `
<DocumentFragment>
  <label
    class="t-checkbox"
  >
    <input
      class="t-checkbox__former"
      name="checkbox-name"
      type="checkbox"
      value=""
    />
    <span
      class="t-checkbox__input"
    />
  </label>
</DocumentFragment>
`;

exports[`CheckboxGroup > disabled 1`] = `
<DocumentFragment>
  <div
    class="t-checkbox-group"
  >
    <label
      class="t-checkbox t-is-disabled"
    >
      <input
        class="t-checkbox__former"
        disabled=""
        type="checkbox"
        value="北京"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-checkbox t-is-disabled"
    >
      <input
        class="t-checkbox__former"
        disabled=""
        type="checkbox"
        value="广州"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        广州
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > max 1`] = `
<DocumentFragment>
  <div
    class="t-checkbox-group"
  >
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="gz"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-checkbox t-is-checked"
    >
      <input
        checked=""
        class="t-checkbox__former"
        type="checkbox"
        value="sz"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        深圳
      </span>
    </label>
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="bj"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        北京
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > name 1`] = `
<DocumentFragment>
  <div
    class="t-checkbox-group"
  >
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="gz"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-checkbox t-is-disabled"
    >
      <input
        class="t-checkbox__former"
        disabled=""
        type="checkbox"
        value="sz"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        深圳
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > option 1`] = `
<DocumentFragment>
  <div
    class="t-checkbox-group"
  >
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="上海"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        上海
      </span>
    </label>
    <label
      class="t-checkbox t-is-disabled"
    >
      <input
        class="t-checkbox__former"
        disabled=""
        type="checkbox"
        value="广州"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        广州
      </span>
    </label>
    <label
      class="t-checkbox t-is-checked"
    >
      <input
        checked=""
        class="t-checkbox__former"
        name="北京"
        type="checkbox"
        value="北京"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="1"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        1
      </span>
    </label>
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="重庆"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        重庆
      </span>
    </label>
    <label
      class="t-checkbox t-is-indeterminate"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value=""
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        全选
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > option is number 1`] = `
<DocumentFragment>
  <div
    class="t-checkbox-group"
  >
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="1"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        1
      </span>
    </label>
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="2"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        2
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > option is string 1`] = `
<DocumentFragment>
  <div
    class="t-checkbox-group"
  >
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="北京"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        北京
      </span>
    </label>
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
        value="广州"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        广州
      </span>
    </label>
  </div>
</DocumentFragment>
`;
